feat: fe verify email page
